--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -30,9 +30,9 @@ depends_on = ["trait-vault", "trait-sip-010", "trait-flash-loan-user", "math-fix
 path = "contracts/pool/collateral-rebalancing-pool.clar"
 depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equation", "fixed-weight-pool", "token-usda", "token-alex", "alex-reserve-pool", "yield-token-pool"]
 
-# [contracts.collateral-rebalancing-pool-yt]
-# path = "contracts/pool/collateral-rebalancing-pool-yt.clar"
-# depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equation", "fixed-weight-pool", "token-usda", "token-alex", "alex-reserve-pool", "yield-token-pool"]
+[contracts.collateral-rebalancing-pool-yt]
+path = "contracts/pool/collateral-rebalancing-pool-yt.clar"
+depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equation", "fixed-weight-pool", "token-usda", "token-alex", "alex-reserve-pool", "yield-token-pool"]
 
 [contracts.faucet]
 path = "contracts/faucet.clar"
