--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -22,6 +22,10 @@ depends_on = ["trait-ownable", "trait-sip-010", "alex-vault"]
 path = "contracts/pool/alex-futures-pool.clar"
 depends_on = ["trait-ownable", "token-alex", "trait-semi-fungible-token", "trait-multisig-vote", "alex-reserve-pool"]
 
+[contracts.stacking-pool]
+path = "contracts/pool/stacking-pool.clar"
+depends_on = ["trait-ownable", "trait-semi-fungible-token", "trait-multisig-vote", "alex-reserve-pool"]
+
 [contracts.alex-vault]
 path = "contracts/alex-vault.clar"
 depends_on = ["trait-vault", "trait-sip-010", "trait-flash-loan-user", "math-fixed-point", "trait-ownable", "trait-semi-fungible-token"]
