--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -198,13 +198,13 @@ depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
 path = "contracts/yield-token/yield-usda-23040.clar"
 depends_on = ["trait-sip-010", "trait-yield-token", "token-usda", "trait-ownable"]
 
-[contracts.flash-loan-user-margin-wbtc-usda-23040]
-path = "contracts/flash-loan-user-margin-wbtc-usda-23040.clar"
-depends_on = ["token-usda", "token-wbtc", "yield-usda-23040", "key-usda-23040-wbtc", "trait-sip-010"]
+[contracts.flash-loan-user-margin-wstx-usda-23040]
+path = "contracts/flash-loan-user-margin-wstx-usda-23040.clar"
+depends_on = ["token-usda", "token-wstx", "yield-usda-23040", "key-usda-23040-wstx", "trait-sip-010"]
 
-[contracts.key-usda-23040-wbtc]
-path = "contracts/key-token/key-usda-23040-wbtc.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
+[contracts.key-usda-23040-wstx]
+path = "contracts/key-token/key-usda-23040-wstx.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wstx", "trait-ownable"]
 
 [contracts.ytp-yield-usda-23040-usda]
 path = "contracts/pool-token/ytp-yield-usda-23040-usda.clar"
@@ -214,9 +214,9 @@ depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
 path = "contracts/multisig/multisig-ytp-yield-usda-23040-usda.clar"
 depends_on = ["ytp-yield-usda-23040-usda", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-usda-23040"]
 
-[contracts.multisig-crp-usda-23040-wbtc]
-path = "contracts/multisig/multisig-crp-usda-23040-wbtc.clar"
-depends_on = ["yield-usda-23040", "key-usda-23040-wbtc", "token-wbtc", "token-usda", "trait-sip-010"]
+[contracts.multisig-crp-usda-23040-wstx]
+path = "contracts/multisig/multisig-crp-usda-23040-wstx.clar"
+depends_on = ["yield-usda-23040", "key-usda-23040-wstx", "token-wstx", "token-usda", "trait-sip-010"]
 
 [contracts.lbp-alex-usda-90-10]
 path = "contracts/pool-token/lbp-alex-usda-90-10.clar"
@@ -230,13 +230,13 @@ depends_on = []
 path = "contracts/yield-token/yield-usda-51840.clar"
 depends_on = ["trait-sip-010", "trait-yield-token", "token-usda", "trait-ownable"]
 
-[contracts.flash-loan-user-margin-wbtc-usda-51840]
-path = "contracts/flash-loan-user-margin-wbtc-usda-51840.clar"
-depends_on = ["token-usda", "token-wbtc", "yield-usda-51840", "key-usda-51840-wbtc", "trait-sip-010"]
+[contracts.flash-loan-user-margin-wstx-usda-51840]
+path = "contracts/flash-loan-user-margin-wstx-usda-51840.clar"
+depends_on = ["token-usda", "token-wstx", "yield-usda-51840", "key-usda-51840-wstx", "trait-sip-010"]
 
-[contracts.key-usda-51840-wbtc]
-path = "contracts/key-token/key-usda-51840-wbtc.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
+[contracts.key-usda-51840-wstx]
+path = "contracts/key-token/key-usda-51840-wstx.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wstx", "trait-ownable"]
 
 [contracts.ytp-yield-usda-51840-usda]
 path = "contracts/pool-token/ytp-yield-usda-51840-usda.clar"
@@ -246,6 +246,6 @@ depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
 path = "contracts/multisig/multisig-ytp-yield-usda-51840-usda.clar"
 depends_on = ["ytp-yield-usda-51840-usda", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-usda-51840"]
 
-[contracts.multisig-crp-usda-51840-wbtc]
-path = "contracts/multisig/multisig-crp-usda-51840-wbtc.clar"
-depends_on = ["yield-usda-51840", "key-usda-51840-wbtc", "token-wbtc", "token-usda", "trait-sip-010"]
+[contracts.multisig-crp-usda-51840-wstx]
+path = "contracts/multisig/multisig-crp-usda-51840-wstx.clar"
+depends_on = ["yield-usda-51840", "key-usda-51840-wstx", "token-wstx", "token-usda", "trait-sip-010"]
