--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -261,3 +261,15 @@ depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable
 [contracts.multisig-ytp-yield-wbtc-80875-wbtc]
 path = "contracts/multisig/multisig-ytp-yield-wbtc-80875-wbtc.clar"
 depends_on = ["ytp-yield-wbtc-80875-wbtc", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-wbtc-80875"]
+
+[contracts.multisig-crp-usda-23040-wbtc]
+path = "contracts/multisig/multisig-crp-usda-23040-wbtc.clar"
+depends_on = ["yield-usda-23040", "key-usda-23040-wbtc", "token-wbtc", "token-usda", "trait-sip-010"]
+
+[contracts.flash-loan-user-margin-wbtc-usda-23040]
+path = "contracts/flash-loan-user-margin-wbtc-usda-23040.clar"
+depends_on = ["token-usda", "token-wbtc", "yield-usda-23040", "key-usda-23040-wbtc", "trait-sip-010"]
+
+[contracts.key-usda-23040-wbtc]
+path = "contracts/key-token/key-usda-23040-wbtc.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
