--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -8,7 +8,7 @@ depends_on = ["trait-sip-010", "trait-yield-token", "trait-flash-loan-user"]
 
 [contracts.alex-staking-helper]
 path = "contracts/helpers/alex-staking-helper.clar"
-depends_on = ["alex-reserve-pool"]
+depends_on = ["alex-reserve-pool","token-alex"]
 
 [contracts.alex-reserve-pool]
 path = "contracts/pool/alex-reserve-pool.clar"
@@ -233,3 +233,15 @@ depends_on = ["ytp-yield-usda-51840-usda", "trait-yield-token", "trait-sip-010",
 [contracts.multisig-crp-usda-51840-wbtc]
 path = "contracts/multisig/multisig-crp-usda-51840-wbtc.clar"
 depends_on = ["yield-usda-51840", "key-usda-51840-wbtc", "token-wbtc", "token-usda", "trait-sip-010"]
+
+[contracts.yield-wbtc-80875]
+path = "contracts/yield-token/yield-wbtc-80875.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
+
+[contracts.ytp-yield-wbtc-80875-wbtc]
+path = "contracts/pool-token/ytp-yield-wbtc-80875-wbtc.clar"
+depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
+
+[contracts.multisig-ytp-yield-wbtc-80875-wbtc]
+path = "contracts/multisig/multisig-ytp-yield-wbtc-80875-wbtc.clar"
+depends_on = ["ytp-yield-wbtc-80875-wbtc", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-wbtc-80875"]
