--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1,26 +1,18 @@
 [project]
 name = "alex-v1"
 requirements = []
-
-[contracts.trait-semi-fungible-token]
-path = "contracts/traits/trait-semi-fungible-token.clar"
-depends_on = []
-
-[contracts.margin-helper]
-path = "contracts/helpers/margin-helper.clar"
-depends_on = ["trait-sip-010", "trait-flash-loan-user"]
-
-[contracts.alex-staking-helper]
-path = "contracts/helpers/alex-staking-helper.clar"
-depends_on = ["alex-reserve-pool","token-alex"]
+costs_version = 1
+[contracts.alex-futures-pool]
+path = "contracts/pool/alex-futures-pool.clar"
+depends_on = ["trait-ownable", "token-alex", "trait-semi-fungible-token", "trait-multisig-vote", "alex-reserve-pool"]
 
 [contracts.alex-reserve-pool]
 path = "contracts/pool/alex-reserve-pool.clar"
 depends_on = ["trait-ownable", "trait-sip-010", "alex-vault"]
 
-[contracts.alex-futures-pool]
-path = "contracts/pool/alex-futures-pool.clar"
-depends_on = ["trait-ownable", "token-alex", "trait-semi-fungible-token", "trait-multisig-vote", "alex-reserve-pool"]
+[contracts.alex-staking-helper]
+path = "contracts/helpers/alex-staking-helper.clar"
+depends_on = ["alex-reserve-pool", "token-alex"]
 
 [contracts.alex-vault]
 path = "contracts/alex-vault.clar"
@@ -38,6 +30,14 @@ depends_on = ["token-wbtc", "token-usda", "token-t-alex", "token-wstx"]
 path = "contracts/pool/fixed-weight-pool.clar"
 depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equation", "token-alex", "alex-reserve-pool", "token-usda", "trait-multisig-vote", "token-wstx"]
 
+[contracts.flash-loan-user-margin-usda-wbtc]
+path = "contracts/flash-loan-user-margin-usda-wbtc.clar"
+depends_on = ["trait-sip-010", "trait-flash-loan-user", "yield-usda", "key-usda-wbtc"]
+
+[contracts.flash-loan-user-margin-wstx-usda]
+path = "contracts/flash-loan-user-margin-wstx-usda.clar"
+depends_on = ["trait-sip-010", "trait-flash-loan-user", "token-wstx", "yield-usda", "key-usda-wstx"]
+
 [contracts.fwp-wbtc-usda-50-50]
 path = "contracts/pool-token/fwp-wbtc-usda-50-50.clar"
 depends_on = ["trait-sip-010", "trait-ownable"]
@@ -50,9 +50,33 @@ depends_on = ["trait-sip-010", "trait-ownable"]
 path = "contracts/pool-token/fwp-wstx-wbtc-50-50.clar"
 depends_on = ["trait-sip-010", "trait-ownable"]
 
+[contracts.key-usda-wbtc]
+path = "contracts/key-token/key-usda-wbtc.clar"
+depends_on = ["trait-ownable", "trait-semi-fungible-token"]
+
+[contracts.key-usda-wstx]
+path = "contracts/key-token/key-usda-wstx.clar"
+depends_on = ["trait-ownable", "trait-semi-fungible-token"]
+
+[contracts.key-wbtc-usda]
+path = "contracts/key-token/key-wbtc-usda.clar"
+depends_on = ["trait-ownable", "trait-semi-fungible-token"]
+
+[contracts.key-wbtc-wbtc]
+path = "contracts/key-token/key-wbtc-wbtc.clar"
+depends_on = ["trait-ownable", "trait-semi-fungible-token"]
+
+[contracts.lbp-alex-usda-90-10]
+path = "contracts/pool-token/lbp-alex-usda-90-10.clar"
+depends_on = ["trait-sip-010", "trait-ownable"]
+
 [contracts.liquidity-bootstrapping-pool]
 path = "contracts/pool/liquidity-bootstrapping-pool.clar"
 depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equation", "token-alex", "alex-reserve-pool", "token-usda", "fixed-weight-pool", "trait-multisig-vote"]
+
+[contracts.margin-helper]
+path = "contracts/helpers/margin-helper.clar"
+depends_on = ["trait-sip-010", "trait-flash-loan-user"]
 
 [contracts.math-fixed-point]
 path = "contracts/lib/math-fixed-point.clar"
@@ -70,6 +94,22 @@ depends_on = ["math-new-log-exp"]
 path = "contracts/new-lib/math-new-log-exp.clar"
 depends_on = []
 
+[contracts.multisig-crp-usda-wbtc]
+path = "contracts/multisig/multisig-crp-usda-wbtc.clar"
+depends_on = ["yield-usda", "key-usda-wbtc"]
+
+[contracts.multisig-crp-usda-wstx]
+path = "contracts/multisig/multisig-crp-usda-wstx.clar"
+depends_on = ["yield-usda", "key-usda-wstx"]
+
+[contracts.multisig-crp-wbtc-usda]
+path = "contracts/multisig/multisig-crp-wbtc-usda.clar"
+depends_on = ["yield-wbtc", "key-wbtc-usda"]
+
+[contracts.multisig-crp-wbtc-wbtc]
+path = "contracts/multisig/multisig-crp-wbtc-wbtc.clar"
+depends_on = ["yield-wbtc", "key-wbtc-wbtc"]
+
 [contracts.multisig-fwp-wbtc-usda-50-50]
 path = "contracts/multisig/multisig-fwp-wbtc-usda-50-50.clar"
 depends_on = []
@@ -81,6 +121,18 @@ depends_on = []
 [contracts.multisig-fwp-wstx-wbtc-50-50]
 path = "contracts/multisig/multisig-fwp-wstx-wbtc-50-50.clar"
 depends_on = []
+
+[contracts.multisig-lbp-alex-usda-90-10]
+path = "contracts/multisig/multisig-lbp-alex-usda-90-10.clar"
+depends_on = []
+
+[contracts.multisig-ytp-yield-usda]
+path = "contracts/multisig/multisig-ytp-yield-usda.clar"
+depends_on = ["ytp-yield-usda", "yield-usda"]
+
+[contracts.multisig-ytp-yield-wbtc]
+path = "contracts/multisig/multisig-ytp-yield-wbtc.clar"
+depends_on = ["ytp-yield-wbtc", "yield-wbtc"]
 
 [contracts.token-alex]
 path = "contracts/token/token-alex.clar"
@@ -118,6 +170,10 @@ depends_on = []
 path = "contracts/traits/trait-ownable.clar"
 depends_on = []
 
+[contracts.trait-semi-fungible-token]
+path = "contracts/traits/trait-semi-fungible-token.clar"
+depends_on = []
+
 [contracts.trait-sip-010]
 path = "contracts/traits/trait-sip-010.clar"
 depends_on = []
@@ -138,98 +194,6 @@ depends_on = ["math-fixed-point"]
 path = "contracts/pool/yield-token-pool.clar"
 depends_on = ["trait-sip-010", "trait-vault", "trait-flash-loan-user", "math-fixed-point", "yield-token-equation", "trait-semi-fungible-token", "token-alex", "token-usda", "fixed-weight-pool", "alex-reserve-pool", "trait-multisig-vote"]
 
-# [contracts.key-wbtc-59760-wbtc]
-# path = "contracts/key-token/key-wbtc-59760-wbtc.clar"
-# depends_on = ["trait-sip-010", "token-wbtc", "trait-ownable"]
-
-# [contracts.multisig-crp-wbtc-79760-usda]
-# path = "contracts/multisig/multisig-crp-wbtc-79760-usda.clar"
-# depends_on = ["yield-wbtc-79760", "key-wbtc-79760-usda", "token-wbtc", "token-usda", "trait-sip-010"]
-
-# [contracts.yield-wbtc-79760]
-# path = "contracts/yield-token/yield-wbtc-79760.clar"
-# depends_on = ["trait-sip-010", "token-wbtc", "trait-ownable"]
-
-# [contracts.multisig-ytp-yield-wbtc-79760-wbtc]
-# path = "contracts/multisig/multisig-ytp-yield-wbtc-79760-wbtc.clar"
-# depends_on = ["ytp-yield-wbtc-79760-wbtc", "trait-sip-010", "yield-token-pool", "yield-wbtc-79760"]
-
-# [contracts.key-wbtc-79760-usda]
-# path = "contracts/key-token/key-wbtc-79760-usda.clar"
-# depends_on = ["trait-sip-010", "token-wbtc", "trait-ownable"]
-
-# [contracts.yield-usda-23040]
-# path = "contracts/yield-token/yield-usda-23040.clar"
-# depends_on = ["trait-sip-010", "token-usda", "trait-ownable"]
-
-# [contracts.flash-loan-user-margin-wstx-usda-23040]
-# path = "contracts/flash-loan-user-margin-wstx-usda-23040.clar"
-# depends_on = ["token-usda", "token-wstx", "yield-usda-23040", "key-usda-23040-wstx", "trait-sip-010"]
-
-# [contracts.key-usda-23040-wstx]
-# path = "contracts/key-token/key-usda-23040-wstx.clar"
-# depends_on = ["trait-sip-010", "token-wstx", "trait-ownable"]
-
-# [contracts.multisig-ytp-yield-usda-23040-usda]
-# path = "contracts/multisig/multisig-ytp-yield-usda-23040-usda.clar"
-# depends_on = ["ytp-yield-usda-23040-usda", "trait-sip-010", "yield-token-pool", "yield-usda-23040"]
-
-# [contracts.multisig-crp-usda-23040-wstx]
-# path = "contracts/multisig/multisig-crp-usda-23040-wstx.clar"
-# depends_on = ["yield-usda-23040", "key-usda-23040-wstx", "token-wstx", "token-usda", "trait-sip-010"]
-
-[contracts.lbp-alex-usda-90-10]
-path = "contracts/pool-token/lbp-alex-usda-90-10.clar"
-depends_on = ["trait-sip-010", "trait-ownable"]
-
-[contracts.ytp-yield-usda]
-path = "contracts/pool-token/ytp-yield-usda.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-token"]
-
-[contracts.multisig-lbp-alex-usda-90-10]
-path = "contracts/multisig/multisig-lbp-alex-usda-90-10.clar"
-depends_on = []
-
-# [contracts.yield-usda-51840]
-# path = "contracts/yield-token/yield-usda-51840.clar"
-# depends_on = ["trait-sip-010", "token-usda", "trait-ownable"]
-
-# [contracts.flash-loan-user-margin-wstx-usda-51840]
-# path = "contracts/flash-loan-user-margin-wstx-usda-51840.clar"
-# depends_on = ["token-usda", "token-wstx", "yield-usda-51840", "key-usda-51840-wstx", "trait-sip-010"]
-
-# [contracts.key-usda-51840-wstx]
-# path = "contracts/key-token/key-usda-51840-wstx.clar"
-# depends_on = ["trait-sip-010", "token-wstx", "trait-ownable"]
-
-[contracts.multisig-crp-usda-wbtc]
-path = "contracts/multisig/multisig-crp-usda-wbtc.clar"
-depends_on = ["yield-usda", "key-usda-wbtc"]
-
-[contracts.multisig-crp-wbtc-wbtc]
-path = "contracts/multisig/multisig-crp-wbtc-wbtc.clar"
-depends_on = ["yield-wbtc", "key-wbtc-wbtc"]
-
-[contracts.multisig-crp-wbtc-usda]
-path = "contracts/multisig/multisig-crp-wbtc-usda.clar"
-depends_on = ["yield-wbtc", "key-wbtc-usda"]
-
-[contracts.multisig-ytp-yield-usda]
-path = "contracts/multisig/multisig-ytp-yield-usda.clar"
-depends_on = ["ytp-yield-usda", "yield-usda"]
-
-[contracts.key-usda-wbtc]
-path = "contracts/key-token/key-usda-wbtc.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-token"]
-
-[contracts.key-wbtc-usda]
-path = "contracts/key-token/key-wbtc-usda.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-token"]
-
-[contracts.key-wbtc-wbtc]
-path = "contracts/key-token/key-wbtc-wbtc.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-token"]
-
 [contracts.yield-usda]
 path = "contracts/yield-token/yield-usda.clar"
 depends_on = ["trait-ownable", "trait-semi-fungible-token"]
@@ -238,34 +202,10 @@ depends_on = ["trait-ownable", "trait-semi-fungible-token"]
 path = "contracts/yield-token/yield-wbtc.clar"
 depends_on = ["trait-ownable", "trait-semi-fungible-token"]
 
-[contracts.multisig-ytp-yield-wbtc]
-path = "contracts/multisig/multisig-ytp-yield-wbtc.clar"
-depends_on = ["ytp-yield-wbtc", "yield-wbtc"]
+[contracts.ytp-yield-usda]
+path = "contracts/pool-token/ytp-yield-usda.clar"
+depends_on = ["trait-ownable", "trait-semi-fungible-token"]
 
 [contracts.ytp-yield-wbtc]
 path = "contracts/pool-token/ytp-yield-wbtc.clar"
 depends_on = ["trait-ownable", "trait-semi-fungible-token"]
-
-# [contracts.multisig-crp-usda-51840-wstx]
-# path = "contracts/multisig/multisig-crp-usda-51840-wstx.clar"
-# depends_on = ["yield-usda-51840", "key-usda-51840-wstx", "token-wstx", "token-usda", "trait-sip-010"]
-
-# [contracts.yield-wbtc-80875]
-# path = "contracts/yield-token/yield-wbtc-80875.clar"
-# depends_on = ["trait-sip-010", "token-wbtc", "trait-ownable"]
-
-# [contracts.multisig-ytp-yield-wbtc-80875-wbtc]
-# path = "contracts/multisig/multisig-ytp-yield-wbtc-80875-wbtc.clar"
-# depends_on = ["ytp-yield-wbtc-80875-wbtc", "trait-sip-010", "yield-token-pool", "yield-wbtc-80875"]
-
-# [contracts.multisig-crp-usda-23040-wbtc]
-# path = "contracts/multisig/multisig-crp-usda-23040-wbtc.clar"
-# depends_on = ["yield-usda-23040", "key-usda-23040-wbtc", "token-wbtc", "token-usda", "trait-sip-010"]
-
-# [contracts.flash-loan-user-margin-wbtc-usda-23040]
-# path = "contracts/flash-loan-user-margin-wbtc-usda-23040.clar"
-# depends_on = ["token-usda", "token-wbtc", "yield-usda-23040", "key-usda-23040-wbtc", "trait-sip-010"]
-
-[contracts.flash-loan-user-margin-usda-wbtc]
-path = "contracts/flash-loan-user-margin-usda-wbtc.clar"
-depends_on = ["trait-sip-010", "trait-flash-loan-user", "yield-usda", "key-usda-wbtc"]
