clarinet test passes

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -34,8 +34,8 @@ depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equa
 path = "contracts/flash-loan-user-margin-usda-wbtc.clar"
 depends_on = ["trait-sip-010", "trait-flash-loan-user", "yield-usda", "key-usda-wbtc"]
 
-[contracts.flash-loan-user-margin-wstx-usda]
-path = "contracts/flash-loan-user-margin-wstx-usda.clar"
+[contracts.flash-loan-user-margin-usda-wstx]
+path = "contracts/flash-loan-user-margin-usda-wstx.clar"
 depends_on = ["trait-sip-010", "trait-flash-loan-user", "token-wstx", "yield-usda", "key-usda-wstx"]
 
 [contracts.fwp-wstx-usda-50-50]
@@ -201,3 +201,7 @@ depends_on = ["trait-ownable", "trait-semi-fungible-token"]
 [contracts.ytp-yield-wbtc]
 path = "contracts/pool-token/ytp-yield-wbtc.clar"
 depends_on = ["trait-ownable", "trait-semi-fungible-token"]
+
+[contracts.flash-loan-user-margin-wbtc-usda]
+path = "contracts/flash-loan-user-margin-wbtc-usda.clar"
+depends_on = ["trait-sip-010", "trait-flash-loan-user", "token-usda", "yield-wbtc", "key-wbtc-usda"]
