--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -245,3 +245,7 @@ depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
 [contracts.multisig-ytp-yield-wbtc-80875-wbtc]
 path = "contracts/multisig/multisig-ytp-yield-wbtc-80875-wbtc.clar"
 depends_on = ["ytp-yield-wbtc-80875-wbtc", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-wbtc-80875"]
+
+[contracts.alex-staking-helper-laplace]
+path = "contracts/helpers/alex-staking-helper-laplace.clar"
+depends_on = ["alex-reserve-pool"]
