--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1,236 +1,151 @@
 [project]
 name = "alex-v1"
-requirements = []
+requirements = [ ]
 costs_version = 1
-
-[contracts.alex-reserve-pool]
-path = "contracts/pool/alex-reserve-pool.clar"
-depends_on = ["trait-ownable", "trait-sip-010", "alex-vault", "token-alex"]
-
-[contracts.futures-pool]
-path = "contracts/pool/futures-pool.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-token", "trait-multisig-vote", "alex-reserve-pool"]
-
-[contracts.alex-staking-helper]
-path = "contracts/helpers/alex-staking-helper.clar"
-depends_on = ["alex-reserve-pool","token-t-alex"]
-
-[contracts.staking-helper]
-path = "contracts/helpers/staking-helper.clar"
-depends_on = ["alex-reserve-pool", "trait-sip-010"]
-
-[contracts.alex-vault]
-path = "contracts/alex-vault.clar"
-depends_on = ["trait-vault", "trait-sip-010", "trait-flash-loan-user", "math-fixed-point", "trait-ownable", "trait-semi-fungible-token"]
-
-[contracts.collateral-rebalancing-pool]
-path = "contracts/pool/collateral-rebalancing-pool.clar"
-depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equation", "fixed-weight-pool", "token-usda", "token-alex", "alex-reserve-pool", "yield-token-pool"]
-
-[contracts.yield-collateral-rebalancing-pool]
-path = "contracts/pool/yield-collateral-rebalancing-pool.clar"
-depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equation", "fixed-weight-pool", "token-usda", "token-alex", "alex-reserve-pool", "yield-token-pool"]
-
-[contracts.faucet]
-path = "contracts/faucet.clar"
-depends_on = ["token-wbtc", "token-usda", "token-t-alex", "token-wstx"]
 
 [contracts.fixed-weight-pool]
 path = "contracts/pool/fixed-weight-pool.clar"
-depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equation", "token-alex", "alex-reserve-pool", "token-usda", "trait-multisig-vote", "token-wstx"]
+depends_on = [
+  "trait-sip-010",
+  "trait-vault",
+  "math-fixed-point",
+  "weighted-equation",
+  "token-alex",
+  "alex-reserve-pool",
+  "token-usda",
+  "trait-multisig-vote",
+  "token-wstx"
+]
 
-[contracts.flash-loan-user-margin-usda-wbtc]
-path = "contracts/flash-loan-user-margin-usda-wbtc.clar"
-depends_on = ["trait-sip-010", "trait-flash-loan-user", "yield-usda", "key-usda-wbtc"]
-
-[contracts.flash-loan-user-margin-usda-wstx]
-path = "contracts/flash-loan-user-margin-usda-wstx.clar"
-depends_on = ["trait-sip-010", "trait-flash-loan-user", "token-wstx", "yield-usda", "key-usda-wstx"]
-
-[contracts.fwp-wstx-usda-50-50]
-path = "contracts/pool-token/fwp-wstx-usda-50-50.clar"
-depends_on = ["trait-sip-010", "trait-ownable"]
-
-[contracts.fwp-wstx-wbtc-50-50]
-path = "contracts/pool-token/fwp-wstx-wbtc-50-50.clar"
-depends_on = ["trait-sip-010", "trait-ownable"]
-
-[contracts.key-usda-wbtc]
-path = "contracts/key-token/key-usda-wbtc.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-token"]
-
-[contracts.key-usda-wstx]
-path = "contracts/key-token/key-usda-wstx.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-token"]
-
-[contracts.liquidity-bootstrapping-pool]
-path = "contracts/pool/liquidity-bootstrapping-pool.clar"
-depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equation", "token-alex", "alex-reserve-pool", "token-usda", "fixed-weight-pool", "trait-multisig-vote"]
-
-[contracts.margin-helper]
-path = "contracts/helpers/margin-helper.clar"
-depends_on = ["trait-sip-010", "trait-flash-loan-user"]
-
-[contracts.math-fixed-point]
-path = "contracts/lib/math-fixed-point.clar"
-depends_on = ["math-log-exp"]
-
-[contracts.math-log-exp]
-path = "contracts/lib/math-log-exp.clar"
-depends_on = []
-
-[contracts.math-new-fixed-point]
-path = "contracts/new-lib/math-new-fixed-point.clar"
-depends_on = ["math-new-log-exp"]
-
-[contracts.math-new-log-exp]
-path = "contracts/new-lib/math-new-log-exp.clar"
-depends_on = []
-
-[contracts.multisig-crp-usda-wstx]
-path = "contracts/multisig/multisig-crp-usda-wstx.clar"
-depends_on = ["yield-usda", "key-usda-wstx"]
-
-[contracts.multisig-fwp-wstx-usda-50-50]
-path = "contracts/multisig/multisig-fwp-wstx-usda-50-50.clar"
-depends_on = []
-
-[contracts.multisig-fwp-wstx-wbtc-50-50]
-path = "contracts/multisig/multisig-fwp-wstx-wbtc-50-50.clar"
-depends_on = []
-
-[contracts.multisig-ytp-yield-wbtc]
-path = "contracts/multisig/multisig-ytp-yield-wbtc.clar"
-depends_on = ["ytp-yield-wbtc", "yield-wbtc"]
-
-[contracts.token-alex]
-path = "contracts/token/token-alex.clar"
-depends_on = ["trait-ownable", "trait-sip-010"]
-
-[contracts.token-t-alex]
-path = "contracts/token/token-t-alex.clar"
-depends_on = ["trait-ownable", "trait-sip-010"]
-
-[contracts.token-usda]
-path = "contracts/token/token-usda.clar"
-depends_on = ["trait-ownable", "trait-sip-010"]
-
-[contracts.token-wbtc]
-path = "contracts/token/token-wbtc.clar"
-depends_on = ["trait-ownable", "trait-sip-010"]
-
-[contracts.token-wstx]
-path = "contracts/token/token-wstx.clar"
-depends_on = ["trait-ownable", "alex-vault", "trait-sip-010"]
-
-[contracts.trait-flash-loan-user]
-path = "contracts/traits/trait-flash-loan-user.clar"
-depends_on = ["trait-sip-010"]
-
-[contracts.trait-multisig-vote]
-path = "contracts/traits/trait-multisig-vote.clar"
-depends_on = ["trait-sip-010"]
-
-[contracts.trait-oracle]
-path = "contracts/traits/trait-oracle.clar"
-depends_on = []
-
-[contracts.trait-ownable]
-path = "contracts/traits/trait-ownable.clar"
-depends_on = []
-
-[contracts.trait-semi-fungible-token]
-path = "contracts/traits/trait-semi-fungible-token.clar"
-depends_on = []
-
-[contracts.trait-sip-010]
-path = "contracts/traits/trait-sip-010.clar"
-depends_on = []
-
-[contracts.trait-vault]
-path = "contracts/traits/trait-vault.clar"
-depends_on = ["trait-sip-010", "trait-flash-loan-user"]
-
-[contracts.weighted-equation]
-path = "contracts/equations/weighted-equation.clar"
-depends_on = ["math-fixed-point"]
-
-[contracts.yield-token-equation]
-path = "contracts/equations/yield-token-equation.clar"
-depends_on = ["math-fixed-point"]
-
-[contracts.yield-token-pool]
-path = "contracts/pool/yield-token-pool.clar"
-depends_on = ["trait-sip-010", "trait-vault", "trait-flash-loan-user", "math-fixed-point", "yield-token-equation", "trait-semi-fungible-token", "token-alex", "token-usda", "fixed-weight-pool", "alex-reserve-pool", "trait-multisig-vote"]
-
-[contracts.lbp-alex-usda-90-10]
-path = "contracts/pool-token/lbp-alex-usda-90-10.clar"
-depends_on = ["trait-sip-010", "trait-ownable"]
-
-[contracts.multisig-lbp-alex-usda-90-10]
-path = "contracts/multisig/multisig-lbp-alex-usda-90-10.clar"
-depends_on = []
-
-[contracts.multisig-crp-usda-wbtc]
-path = "contracts/multisig/multisig-crp-usda-wbtc.clar"
-depends_on = ["yield-usda", "key-usda-wbtc"]
-
-[contracts.multisig-crp-wbtc-wbtc]
-path = "contracts/multisig/multisig-crp-wbtc-wbtc.clar"
-depends_on = ["yield-wbtc", "key-wbtc-wbtc"]
-
-[contracts.multisig-crp-wbtc-usda]
-path = "contracts/multisig/multisig-crp-wbtc-usda.clar"
-depends_on = ["yield-wbtc", "key-wbtc-usda"]
-
-[contracts.multisig-ytp-yield-usda]
-path = "contracts/multisig/multisig-ytp-yield-usda.clar"
-depends_on = ["ytp-yield-usda", "yield-usda"]
-
-[contracts.key-wbtc-usda]
-path = "contracts/key-token/key-wbtc-usda.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-token"]
-
-[contracts.key-wbtc-wbtc]
-path = "contracts/key-token/key-wbtc-wbtc.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-token"]
-
-[contracts.yield-usda]
-path = "contracts/yield-token/yield-usda.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-token"]
-
-[contracts.yield-wbtc]
-path = "contracts/yield-token/yield-wbtc.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-token"]
-
-[contracts.ytp-yield-usda]
-path = "contracts/pool-token/ytp-yield-usda.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-token"]
-
-[contracts.ytp-yield-wbtc]
-path = "contracts/pool-token/ytp-yield-wbtc.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-token"]
+[contracts.faucet]
+path = "contracts/faucet.clar"
+depends_on = [ "token-wbtc", "token-usda", "token-t-alex", "token-wstx" ]
 
 [contracts.alex-launchpad]
 path = "contracts/pool/alex-launchpad.clar"
-depends_on = ["trait-ownable", "trait-sip-010", "token-wstx"]
+depends_on = [ "trait-ownable", "trait-sip-010", "token-wstx" ]
 
-[contracts.staked-alex]
-path = "contracts/staked-token/staked-alex.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-token"]
+[contracts.fwp-wstx-usda-50-50]
+path = "contracts/pool-token/fwp-wstx-usda-50-50.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
 
-[contracts.flash-loan-user-margin-wbtc-usda]
-path = "contracts/flash-loan-user-margin-wbtc-usda.clar"
-depends_on = ["trait-sip-010", "trait-flash-loan-user", "token-usda", "yield-wbtc", "key-wbtc-usda"]
+[contracts.fwp-wstx-wbtc-50-50]
+path = "contracts/pool-token/fwp-wstx-wbtc-50-50.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
 
-[contracts.lottery-t-alex]
-path = "contracts/lottery-tokens/lottery-t-alex.clar"
-depends_on = ["trait-ownable", "trait-sip-010"]
+[contracts.multisig-crp-usda-wbtc]
+path = "contracts/multisig/multisig-crp-usda-wbtc.clar"
+depends_on = [ "yield-usda", "key-usda-wbtc" ]
 
-[contracts.alex-staking-helper-laplace]
-path = "contracts/helpers/alex-staking-helper-laplace.clar"
-depends_on = ["alex-reserve-pool"]
+[contracts.collateral-rebalancing-pool]
+path = "contracts/pool/collateral-rebalancing-pool.clar"
+depends_on = [
+  "trait-sip-010",
+  "trait-vault",
+  "math-fixed-point",
+  "weighted-equation",
+  "fixed-weight-pool",
+  "token-usda",
+  "token-alex",
+  "alex-reserve-pool",
+  "yield-token-pool"
+]
 
-[contracts.test-pool-token]
-path = "contracts/pool-token/test-pool-token.clar"
-depends_on = ["trait-sip-010", "trait-sip-010", "trait-ownable"]
+[contracts.trait-sip-010]
+path = "contracts/traits/trait-sip-010.clar"
+depends_on = [ ]
+
+[contracts.trait-vault]
+path = "contracts/traits/trait-vault.clar"
+depends_on = [ "trait-sip-010", "trait-flash-loan-user" ]
+
+[contracts.math-fixed-point]
+path = "contracts/lib/math-fixed-point.clar"
+depends_on = [ "math-log-exp" ]
+
+[contracts.weighted-equation]
+path = "contracts/equations/weighted-equation.clar"
+depends_on = [ "math-fixed-point" ]
+
+[contracts.token-alex]
+path = "contracts/token/token-alex.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+
+[contracts.alex-reserve-pool]
+path = "contracts/pool/alex-reserve-pool.clar"
+depends_on = [ "trait-ownable", "trait-sip-010", "alex-vault", "token-alex" ]
+
+[contracts.token-usda]
+path = "contracts/token/token-usda.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+
+[contracts.trait-multisig-vote]
+path = "contracts/traits/trait-multisig-vote.clar"
+depends_on = [ "trait-sip-010" ]
+
+[contracts.token-wstx]
+path = "contracts/token/token-wstx.clar"
+depends_on = [ "trait-ownable", "alex-vault", "trait-sip-010" ]
+
+[contracts.trait-flash-loan-user]
+path = "contracts/traits/trait-flash-loan-user.clar"
+depends_on = [ "trait-sip-010" ]
+
+[contracts.math-log-exp]
+path = "contracts/lib/math-log-exp.clar"
+depends_on = [ ]
+
+[contracts.trait-ownable]
+path = "contracts/traits/trait-ownable.clar"
+depends_on = [ ]
+
+[contracts.alex-vault]
+path = "contracts/alex-vault.clar"
+depends_on = [
+  "trait-vault",
+  "trait-sip-010",
+  "trait-flash-loan-user",
+  "math-fixed-point",
+  "trait-ownable",
+  "trait-semi-fungible-token"
+]
+
+[contracts.trait-semi-fungible-token]
+path = "contracts/traits/trait-semi-fungible-token.clar"
+depends_on = [ ]
+
+[contracts.token-wbtc]
+path = "contracts/token/token-wbtc.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+
+[contracts.token-t-alex]
+path = "contracts/token/token-t-alex.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+
+[contracts.yield-usda]
+path = "contracts/yield-token/yield-usda.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible-token" ]
+
+[contracts.key-usda-wbtc]
+path = "contracts/key-token/key-usda-wbtc.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible-token" ]
+
+[contracts.yield-token-pool]
+path = "contracts/pool/yield-token-pool.clar"
+depends_on = [
+  "trait-sip-010",
+  "trait-vault",
+  "trait-flash-loan-user",
+  "math-fixed-point",
+  "yield-token-equation",
+  "trait-semi-fungible-token",
+  "token-alex",
+  "token-usda",
+  "fixed-weight-pool",
+  "alex-reserve-pool",
+  "trait-multisig-vote"
+]
+
+[contracts.yield-token-equation]
+path = "contracts/equations/yield-token-equation.clar"
+depends_on = [ "math-fixed-point" ]
