--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ deploy-keychain.json
 **/contract-records/
 **/hex-files/
 **/staged-contracts/
-init-js-tool/node_modules
 init-js-tool/.env
 **/.DS_Store
 
-clarity/node_modules
+.env
+node_modules
