flash-loan-user file names updated

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -33,10 +33,10 @@ depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equa
 
 [contracts.flash-loan-user-margin-usda-wbtc]
 path = "contracts/flash-loan-user-margin-usda-wbtc.clar"
-depends_on = ["trait-sip-010", "trait-flash-loan-user", "yield-usda", "key-usda-wbtc"]
+depends_on = ["trait-sip-010", "trait-flash-loan-user", "yield-wbtc", "key-wbtc-usda"]
 
-[contracts.flash-loan-user-margin-usda-wstx]
-path = "contracts/flash-loan-user-margin-usda-wstx.clar"
+[contracts.flash-loan-user-margin-wstx-usda]
+path = "contracts/flash-loan-user-margin-wstx-usda.clar"
 depends_on = ["trait-sip-010", "trait-flash-loan-user", "token-wstx", "yield-usda", "key-usda-wstx"]
 
 [contracts.fwp-wstx-usda-50-50]
@@ -213,7 +213,7 @@ depends_on = ["trait-ownable", "trait-semi-fungible-token"]
 
 [contracts.flash-loan-user-margin-wbtc-usda]
 path = "contracts/flash-loan-user-margin-wbtc-usda.clar"
-depends_on = ["trait-sip-010", "trait-flash-loan-user", "token-usda", "yield-wbtc", "key-wbtc-usda"]
+depends_on = ["trait-sip-010", "trait-flash-loan-user", "token-wbtc", "yield-usda", "key-usda-wbtc"]
 
 [contracts.lottery-t-alex]
 path = "contracts/lottery-tokens/lottery-t-alex.clar"
