--- a/features/Clarinet.base.toml
+++ b/features/Clarinet.base.toml
@@ -70,15 +70,15 @@ path = "contracts/flash-loan-user-margin-usda-wbtc.clar"
 depends_on = [
     "trait-sip-010",
     "trait-flash-loan-user",
-    "yield-usda",
-    "key-usda-wbtc",
+    "yield-wbtc",
+    "key-wbtc-usda",
     "collateral-rebalancing-pool",
     "yield-token-pool",
     "fixed-weight-pool"
 ]
 
-[contracts.flash-loan-user-margin-usda-wstx]
-path = "contracts/flash-loan-user-margin-usda-wstx.clar"
+[contracts.flash-loan-user-margin-wstx-usda]
+path = "contracts/flash-loan-user-margin-wstx-usda.clar"
 depends_on = [
     "trait-sip-010",
     "trait-flash-loan-user",
@@ -324,9 +324,9 @@ path = "contracts/flash-loan-user-margin-wbtc-usda.clar"
 depends_on = [
     "trait-sip-010",
     "trait-flash-loan-user",
-    "token-usda",
-    "yield-wbtc",
-    "key-wbtc-usda",
+    "token-wbtc",
+    "yield-usda",
+    "key-usda-wbtc",
     "collateral-rebalancing-pool",
     "yield-token-pool",
     "fixed-weight-pool",
