--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "p-queue": "6.6.2",
     "readline-promise": "^1.0.5",
     "replace-in-file": "^6.2.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.3",
     "yargs": "^17.3.0"
   },
   "resolutions": {
