--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Clarity History
 clarity/history.txt
 
-deploy-keychain.json
+deployContracts-keychain.json
 **/contract-records/
 **/hex-files/
 **/staged-contracts/
