--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "select": "node ./features/select.js --env"
+    "select": "ts-node features/select.ts",
+    "deployContracts": "ts-node features/deployContracts.ts"
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@stacks/blockchain-api-client": "^0.69.0",
+    "@types/yargs": "^17.0.7",
     "prettier": "^2.5.1"
   },
   "engines": {
