--- a/.github/workflows/ci-clarinet.yml
+++ b/.github/workflows/ci-clarinet.yml
@@ -27,7 +27,12 @@ jobs:
           entrypoint: "bash"
           args: -c "cd clarity && clarinet test --coverage"
       - name: "Export code coverage"
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v2
         with:
           files: ./coverage.lcov
           verbose: true
+          token: ${{ secrets.CODECOV_TOKEN }}
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: true
+          
