--- a/.github/workflows/ci-clarinet.yml
+++ b/.github/workflows/ci-clarinet.yml
@@ -29,7 +29,7 @@ jobs:
       - name: "Export code coverage"
         uses: codecov/codecov-action@v2
         with:
-          files: ./coverage.lcov
+          files: ./clarity/coverage.lcov
           verbose: true
           token: ${{ secrets.CODECOV_TOKEN }}
           flags: unittests
