--- a/.github/workflows/ci-clarinet.yml
+++ b/.github/workflows/ci-clarinet.yml
@@ -22,8 +22,10 @@ jobs:
           entrypoint: "bash"
           args: -c "cd clarity && clarinet check"
       - name: "Execute test suite"
+        env: 
+          CI_ENV: $(bash <(curl -s https://codecov.io/env))
         uses: docker://hirosystems/clarinet:latest
         with:
           entrypoint: "bash"
-          args: $`bash <(curl -s https://codecov.io/env)` -e CI=true -c "cd clarity && clarinet test --coverage && curl -Os https://uploader.codecov.io/v0.1.0_4653/linux/codecov && chmod +x codecov && ./codecov -t ${{ secrets.CODECOV_TOKEN }} -f coverage.lcov"
+          args: -e ${{ env.CI_ENV }} -e CI=true -c "cd clarity && clarinet test --coverage && curl -Os https://uploader.codecov.io/v0.1.0_4653/linux/codecov && chmod +x codecov && ./codecov -t ${{ secrets.CODECOV_TOKEN }} -f coverage.lcov"
           
