--- a/.github/workflows/ci-clarinet.yml
+++ b/.github/workflows/ci-clarinet.yml
@@ -21,18 +21,9 @@ jobs:
         with:
           entrypoint: "bash"
           args: -c "cd clarity && clarinet check"
-      - name: "Create a shared folder"
-        run: mkdir shared
       - name: "Execute test suite"
         uses: docker://hirosystems/clarinet:latest
         with:
           entrypoint: "bash"
-          args: -v "$PWD/shared:/shared" -c "cd clarity && clarinet test --coverage && mv ./coverage.lcov /shared"
-      - name: "Upload codecov"
-        uses: codecov/codecov-action@v2
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./shared/coverage.lcov
-          fail_ci_if_error: true
-          verbose: true
+          args: -c "cd clarity && clarinet test --coverage"
           
