--- a/.github/workflows/ci-clarinet.yml
+++ b/.github/workflows/ci-clarinet.yml
@@ -23,10 +23,10 @@ jobs:
           args: -c "cd clarity && clarinet check"
       - name: "Set CI env"
         run: |
-          ci_env=`bash <(curl -s https://codecov.io/env)` >> $GITHUB_ENV
+          echo "ci_env=$(bash <(curl -s https://codecov.io/env))" >> $GITHUB_ENV
       - name: "Execute test suite"
         uses: docker://hirosystems/clarinet:latest
         with:
           entrypoint: "bash"
-          args: ${{ env.ci_env }} -e CI=true -c "cd clarity && clarinet test --coverage && curl -Os https://uploader.codecov.io/latest/linux/codecov && chmod +x codecov && ./codecov -t ${{ secrets.CODECOV_TOKEN }} -f coverage.lcov"
+          args: -c "cd clarity && clarinet test --coverage && curl -Os https://uploader.codecov.io/latest/linux/codecov && chmod +x codecov && ./codecov -t ${{ secrets.CODECOV_TOKEN }} -f coverage.lcov"
           
