clarinet version changed to `0.20.0` from `latest`

--- a/.github/workflows/ci-clarinet.yml
+++ b/.github/workflows/ci-clarinet.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: "Check contract"
-        uses: docker://hirosystems/clarinet:latest
+        uses: docker://hirosystems/clarinet:0.20.0
         with:
           entrypoint: "bash"
           args: -c "cd clarity && clarinet check"
@@ -25,7 +25,7 @@ jobs:
         run: |
           echo "ci_env=$(bash <(curl -s https://codecov.io/env))" >> $GITHUB_ENV
       - name: "Execute test suite"
-        uses: docker://hirosystems/clarinet:latest
+        uses: docker://hirosystems/clarinet:0.20.0
         with:
           entrypoint: "bash"
           #args: -c "cd clarity && clarinet test --coverage && curl -Os https://uploader.codecov.io/latest/linux/codecov && chmod +x codecov && ./codecov -t ${{ secrets.CODECOV_TOKEN }} -f coverage.lcov"
