--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stacks/transactions": "^2.0.1",
     "@stacks/wallet-sdk": "^2.0.1",
     "bn.js": "^5.2.0",
+    "c32check": "^1.1.3",
     "chalk": "4.1.2",
     "coingecko-api": "^1.0.10",
     "dotenv": "^10.0.0",
